force-app/main/default/objects/Applicant_Host_Association__c/Applicant_Host_Association__c.object-meta.xml
<CustomObject>
    <label>Applicant Host Association</label>
    <nameField>
        <displayFormat>AHA-{00000}</displayFormat>
        <label>Applicant Host Association</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Host Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>