force-app/main/default/objects/Applicant_Host_Association__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For which Applicant Hosting/Host Instituition</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Contact_Association</relationshipName>
    <type>Lookup</type>
</CustomField>