force-app/main/default/objects/Applicant_Host_Association__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applicant Host Associations</relationshipLabel>
    <relationshipName>Account_Contact_Association</relationshipName>
    <type>Lookup</type>
</CustomField>