force-app/main/default/objects/Applicant_Host_Association__c/fields/Is_the_Host_Instituition_not_for_profit__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Host_Instituition_not_for_profit__c</fullName>
    <label>Is the Host Instituition not-for-profit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>