force-app/main/default/objects/Applicant_Host_Association__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Represents the proposal to which this applicant and host association record belongs.</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Applicant Host Associations</relationshipLabel>
    <relationshipName>Applicant_Host_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>