force-app/main/default/objects/Applicant_Host_Association__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Roles_External_Participants</valueSetName>
    </valueSet>
</CustomField>