force-app/main/default/objects/Applicant_Host_Association__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant__c</columns>
    <columns>Proposal__c</columns>
    <columns>Host__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>